# hyperframe

./: README.md  ROADMAP.md  VALIDATION.md  package-lock.json  package.json
apps/desktop/: package.json
apps/desktop/src/: App.tsx  theme.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: TopBar.tsx
apps/desktop/src/drawings/: PranchasPanel.tsx
apps/desktop/src/editor2d/: hittest.ts
apps/desktop/src/io/: fileio.ts
apps/desktop/src/panels/: InspectorPanel.tsx  MemberDiagrams.tsx  PlansManager.tsx  ResultsPanel.tsx  SettingsModal.tsx  WelcomeModal.tsx
apps/desktop/src/store/: index.ts
apps/desktop/src/viewer3d/: Building.tsx  ControlPanel.tsx  buildGeometry.ts
site/: DESIGN_PROMPT.md  index.html
site/downloads/: HyperFrame_0.2.11_aarch64.dmg  HyperFrame_0.2.11_aarch64.dmg.sha256  HyperFrame_0.2.12_aarch64.dmg  HyperFrame_0.2.12_aarch64.dmg.sha256  HyperFrame_0.2.13_aarch64.dmg  HyperFrame_0.2.13_aarch64.dmg.sha256  HyperFrame_0.2.18_aarch64.dmg  HyperFrame_0.2.18_aarch64.dmg.sha256  HyperFrame_0.2.18_x64-setup.exe.sha256  HyperFrame_0.2.20_aarch64.dmg  HyperFrame_0.2.20_aarch64.dmg.sha256  HyperFrame_0.2.20_x64-setup.exe.sha256  HyperFrame_0.2.22_aarch64.dmg  HyperFrame_0.2.22_aarch64.dmg.sha256  HyperFrame_0.2.22_x64-setup.exe.sha256  HyperFrame_0.2.27_aarch64.dmg  HyperFrame_0.2.27_aarch64.dmg.sha256  HyperFrame_0.2.27_x64-setup.exe.sha256  index.html
site/en/: index.html
site/tools/: shots.mjs
(+6 files in other folders)
