[package]
name = "hyperframe"
version = "0.2.13"
description = "HyperFrame — Análise e dimensionamento estrutural (ABNT)"
authors = ["Cândido Alfredo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
